--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "connect-history-api-fallback": "^1.6.0",
     "cors": "^2.8.5",
+    "ethereumjs-tx": "^2.1.2",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
+    "quorum-js": "^0.3.5",
     "vue": "^2.6.11",
     "vuetify": "^2.2.30"
   },
