--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "register-service-worker": "^1.7.1",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.23",
     "vuex": "^3.1.3",
